# api-examples

./: .gitignore  README.md  redocly.yaml
converted_files/: README.md
curl/: code_lookup.sh  convert_edi.sh  convert_edi_inline.sh  convert_generate_edi_public_api.sh  generate_edi.sh
edi_gen/: README.md
java-parser/: .gitignore  AGENTS.md  README.md  build.gradle  pom.xml  settings.gradle
openapi/: ediconverter.yaml
python/api/: README.md  analytics_top_codes.py  build_and_test_sdk.sh  convert_271.py  convert_277.py  convert_834.py  convert_834_dict.py  convert_834_json.py  convert_835.py  convert_835_csv.py  convert_835_dict.py  convert_835_json.py  convert_837.py  convert_837_835_json.py  convert_837_dict.py  convert_837_dict_single_file.py  convert_837_json.py  convert_837_single_file.py  convert_837_single_file_json.py  convert_837p.py  convert_837p_model.py  edi_converter.py  env.py  generate_835_edi.py  generate_837p.py  generate_837p_edi.py  generate_837p_edi_model.py  generate_python_sdk_reference.sh  get_claim.py  get_files.py  get_payment.py  get_payments.py  parse_edi_271.py  parse_edi_277.py  parse_edi_835_csv.py  parse_edi_claim.py  parse_in_mem_837.py  pydoc-markdown.yml  pyproject.toml  search_claims.py  (+6 more)
python/api/edi_model/: __init__.py  all_classes.py  base.py  enums.py  regenerate_all_classes.py
python/api/ediconvert_sdk/: __init__.py  client.py
python/api/prompts/: generate_python_edi_enums.md  generate_python_edi_model.md
python/api/src/edi_model/: all_classes.py  base.py  enums.py
python/api/src/ediconvert_sdk/: __init__.py  client.py
python/api/viewer/: get_files.py  get_payment.py  upload_delete_files.py
security_docs/: ediconvert-cves.md  ediconvert-sbom-cyclonedx.json  (+2 more)
(+369 files in other folders)
