[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ediconvert-sdk"
version = "0.1.0"
description = "Python SDK for the Healthcare Data Insight EDI Converter API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2",
    "requests>=2.31",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["ediconvert_sdk*", "edi_model*"]
